--- a/src/style.css
+++ b/src/style.css
@@ -13,7 +13,7 @@ body
     scroll-behavior: smooth;
     /* overflow: hidden; */
     color: white;
-    background-color: rgb(62, 20, 20);
+    background-color: rgb(24, 2, 21);
 }
 
 .webgl
@@ -24,5 +24,14 @@ body
     width: 100vw;
     height: 100vh;
     /* cursor: grab; */
+}
+
+video{
+    /* position: relative; */
+    width: 400px;
+    height: 400px;
+    visibility: hidden;
+    /* display: none; */
+    /* z-index: 1; */
 }
 
